--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  background-image: url(images/BG-img.jpg);
+  background-image: url(images/sunset.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   /* width: 100vh; */
@@ -51,6 +51,10 @@ body {
   padding: 10px;
 
   
+}
+
+.activityInfo h4 {
+  padding-bottom: 10px;
 }
 
 button {
